--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="label_accounts">Accounts</string>
+    <string name="label_loans">Loans</string>
+    <string name="label_loan_applications">Loan Applications</string>
 </resources>
