--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
     <string name="label_accounts">Accounts</string>
     <string name="label_loans">Loans</string>
     <string name="label_loan_applications">Loan Applications</string>
+    <string name="message_welcome_back">Welcome Back</string>
+    <string name="message_login_flavour">If this is your first sign in, you have to enter the one-time password that was provided to you.</string>
+    <string name="label_user_name">User ID</string>
+    <string name="label_password">Password</string>
+    <string name="label_forgot_password">Forgot password?</string>
+    <string name="label_login">Sign In</string>
 </resources>
